tests/spec/non_conformant/errors/fn_error/simple.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/fn-error/simple.hrx"

// Ignoring "test", error tests are not supported yet.
